--- a/ConfigRM-V220.json
+++ b/ConfigRM-V220.json
@@ -1,31 +1,28 @@
 {
-    "interInterval": 2,
-    "interTimeDelay": 5,
-    "bannerAds": false,
+    "interInterval": 3,
+    "interTimeDelay": 15,
+    "bannerAds": true,
     "customBanners": true,
-    "loadingDelay": 3.6,
+    "loadingDelay": 1.0,
     "bannerAdInChat": false,
     "isCommunityAvailable": true,
     "isMarketAvailable": true,
     "isCfoxAvailable": true,
-    "isOtherAvailable": true,
+    "isOtherAvailable": false,
     "paywallInterval": 6,
     "autoPaywall": true,
-    "admobBanner": "ca-app-pub-3940256099942544/6300978111",
-    "admobInter": "ca-app-pub-3940256099942544/1033173712",
-    "admobNative": "ca-app-pub-3940256099942544/3986624511",
-    "tradeAdmobInter": "ca-app-pub-3940256099942544/1033173712",
+    "admobBanner": "ca-app-pub-3676542281302128/9735268683",
+    "admobInter": "ca-app-pub-3676542281302128/3020604953",
+    "admobNative": "ca-app-pub-3676542281302128/4186006645",
+    "tradeAdmobInter": "ca-app-pub-3676542281302128/7596706414",
     "showNewListingInter": false,
     "showNativeInListings": true,
     "linesBeforeNative": 10,
     "maxAllowedListings": 10,
     "delayToShowTradeInter": 20,
-    "intervalTradeInter": 2,
-    "isAppOpenAds": true,
-    "appOpenAdsInterval": 1,
-    "admobAppOpen": "ca-app-pub-3940256099942544/5575463023",
-    "isCollapsibleBanner": true,
-    "admobCollapsibleBanner": "ca-app-pub-3940256099942544/8388050270",
-    "notificationDialogInterval":2,
+    "intervalTradeInter": 4,
+    "isCollapsibleBanner": false,
+    "admobCollapsibleBanner": "ca-app-pub-3676542281302128/3788388840",
+    "notificationDialogInterval": 3,
     "showNotificationDialog": false
 }
