--- a/ConfigRM-V220.json
+++ b/ConfigRM-V220.json
@@ -1,6 +1,6 @@
 {
-    "interInterval": 3,
-    "interTimeDelay": 15,
+    "interInterval": 2,
+    "interTimeDelay": 10,
     "bannerAds": true,
     "customBanners": true,
     "loadingDelay": 1.0,
@@ -8,7 +8,7 @@
     "isCommunityAvailable": true,
     "isMarketAvailable": true,
     "isCfoxAvailable": true,
-    "isOtherAvailable": false,
+    "isOtherAvailable": true,
     "paywallInterval": 6,
     "autoPaywall": true,
     "admobBanner": "ca-app-pub-3676542281302128/9735268683",
