--- a/ConfigRM-V220.json
+++ b/ConfigRM-V220.json
@@ -1,5 +1,5 @@
 {
-    "interInterval": 2,
+    "interInterval": 1,
     "interTimeDelay": 10,
     "bannerAds": true,
     "customBanners": true,
@@ -9,7 +9,7 @@
     "isMarketAvailable": true,
     "isCfoxAvailable": true,
     "isOtherAvailable": true,
-    "paywallInterval": 6,
+    "paywallInterval": 7,
     "autoPaywall": true,
     "admobBanner": "ca-app-pub-3676542281302128/9735268683",
     "admobInter": "ca-app-pub-3676542281302128/3020604953",
@@ -23,6 +23,6 @@
     "intervalTradeInter": 4,
     "isCollapsibleBanner": false,
     "admobCollapsibleBanner": "ca-app-pub-3676542281302128/3788388840",
-    "notificationDialogInterval": 3,
-    "showNotificationDialog": false
+    "notificationDialogInterval": 4,
+    "showNotificationDialog": true
 }
