--- a/ConfigRM-V221.json
+++ b/ConfigRM-V221.json
@@ -3,18 +3,18 @@
     "interTimeDelay": 15,
     "bannerAds": true,
     "customBanners": true,
-    "loadingDelay": 3.1,
+    "loadingDelay": 1.0,
     "bannerAdInChat": false,
     "isCommunityAvailable": true,
     "isMarketAvailable": true,
     "isCfoxAvailable": true,
-    "isOtherAvailable": true,
-    "paywallInterval": 6,
+    "isOtherAvailable": false,
+    "paywallInterval": 7,
     "autoPaywall": true,
-    "admobBanner": "ca-app-pub-3940256099942544/6300978111",
-    "admobInter": "ca-app-pub-3940256099942544/1033173712",
-    "admobNative": "ca-app-pub-3940256099942544/3986624511",
-    "tradeAdmobInter": "ca-app-pub-3940256099942544/1033173712",
+    "admobBanner": "ca-app-pub-3676542281302128/9735268683",
+    "admobInter": "ca-app-pub-3676542281302128/3020604953",
+    "admobNative": "ca-app-pub-3676542281302128/4186006645",
+    "tradeAdmobInter": "ca-app-pub-3676542281302128/7596706414",
     "showNewListingInter": false,
     "showNativeInListings": true,
     "linesBeforeNative": 10,
@@ -22,7 +22,7 @@
     "delayToShowTradeInter": 20,
     "intervalTradeInter": 4,
     "isCollapsibleBanner": false,
-    "admobCollapsibleBanner": "ca-app-pub-3940256099942544/6300978111",
-    "notificationDialogInterval": 3,
+    "admobCollapsibleBanner": "ca-app-pub-3676542281302128/3788388840",
+    "notificationDialogInterval": 4,
     "showNotificationDialog": false
 }
