--- a/ConfigRM-V221.json
+++ b/ConfigRM-V221.json
@@ -1,6 +1,6 @@
 {
-    "interInterval": 5,
-    "interTimeDelay": 15,
+    "interInterval": 1,
+    "interTimeDelay": 10,
     "bannerAds": true,
     "customBanners": true,
     "loadingDelay": 1.0,
@@ -8,8 +8,8 @@
     "isCommunityAvailable": true,
     "isMarketAvailable": true,
     "isCfoxAvailable": true,
-    "isOtherAvailable": false,
-    "paywallInterval": 7,
+    "isOtherAvailable": true,
+    "paywallInterval": 6,
     "autoPaywall": true,
     "admobBanner": "ca-app-pub-3676542281302128/9735268683",
     "admobInter": "ca-app-pub-3676542281302128/3020604953",
@@ -20,9 +20,9 @@
     "linesBeforeNative": 10,
     "maxAllowedListings": 10,
     "delayToShowTradeInter": 20,
-    "intervalTradeInter": 4,
+    "intervalTradeInter": 6,
     "isCollapsibleBanner": false,
     "admobCollapsibleBanner": "ca-app-pub-3676542281302128/3788388840",
-    "notificationDialogInterval": 4,
-    "showNotificationDialog": false
+    "notificationDialogInterval": 3,
+    "showNotificationDialog": true
 }
