--- a/ConfigRM-V221.json
+++ b/ConfigRM-V221.json
@@ -1,15 +1,15 @@
 {
     "interInterval": 1,
-    "interTimeDelay": 11,
-    "bannerAds": true,
+    "interTimeDelay": 10,
+    "bannerAds": false,
     "customBanners": true,
-    "loadingDelay": 1.1,
+    "loadingDelay": 1.0,
     "bannerAdInChat": false,
     "isCommunityAvailable": true,
     "isMarketAvailable": true,
     "isCfoxAvailable": true,
     "isOtherAvailable": true,
-    "paywallInterval": 4,
+    "paywallInterval": 5,
     "autoPaywall": true,
     "admobBanner": "ca-app-pub-3676542281302128/9735268683",
     "admobInter": "ca-app-pub-3676542281302128/3020604953",
@@ -20,7 +20,7 @@
     "linesBeforeNative": 10,
     "maxAllowedListings": 10,
     "delayToShowTradeInter": 20,
-    "intervalTradeInter": 8,
+    "intervalTradeInter": 4,
     "isCollapsibleBanner": false,
     "admobCollapsibleBanner": "ca-app-pub-3676542281302128/3788388840",
     "notificationDialogInterval": 101,
